--- a/themes/Dark/System/res/values/styles.xml
+++ b/themes/Dark/System/res/values/styles.xml
@@ -23,6 +23,11 @@
         <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
         <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
+    <style name="Theme.DeviceDefault.SearchBar" parent="@*android:style/Theme.Material.SearchBar">
+        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
+        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
+        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+    </style>
     <style name="Theme.Material.Settings.BaseDialog" parent="@*android:style/Theme.Material.BaseDialog">
         <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
         <item name="android:colorPrimaryDark">@*android:color/primary_device_default_dark</item>
@@ -159,6 +164,21 @@
         <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
         <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
+    <style name="Theme.DeviceDefault.Light.Dialog.NoActionBar.MinWidth" parent="@*android:style/Theme.Material.Dialog.NoActionBar.MinWidth">
+        <item name="android:colorPrimary">@*android:color/black</item>
+        <item name="android:colorPrimaryDark">@*android:color/black</item>
+        <item name="android:colorSecondary">@*android:color/black</item>
+        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
+        <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
+        <item name="android:textColorPrimary">#ffffffff</item>
+        <item name="android:textColorSecondary">#fff5f5f5</item>
+        <item name="android:textColorTertiary">#b3f5f5f5</item>
+        <item name="android:textColorHint">#ff999999</item>
+        <item name="android:textColorAlertDialogListItem">#ffffffff</item>
+        <item name="android:colorBackground">@*android:color/black</item>
+        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
+        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
+    </style>
     <style name="Theme.DeviceDefault.Light.Dialog.FixedSize" parent="@*android:style/Theme.Material" >
         <item name="*android:windowFixedWidthMajor">@*android:dimen/dialog_fixed_width_major</item>
         <item name="*android:windowFixedWidthMinor">@*android:dimen/dialog_fixed_width_minor</item>
@@ -242,22 +262,6 @@
         <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
         <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
     </style>
-    <style name="Theme.DeviceDefault.Light.SearchBar" parent="@*android:style/Theme.Material.SearchBar">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
-        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
-        <item name="android:colorBackground">@*android:color/material_grey_900</item>
-        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
-        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
-    </style>
-    <style name="Theme.DeviceDefault.Light.Voice" parent="@*android:style/Theme.Material.Voice">
-        <item name="android:colorPrimary">@*android:color/primary_device_default_dark</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_dark_device_default_settings</item>
-        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
-        <item name="android:colorBackground">@*android:color/material_grey_900</item>
-        <item name="android:dialogTheme">@*android:style/Theme.Material.Settings.BaseDialog</item>
-        <item name="android:alertDialogTheme">@*android:style/Theme.Material.Settings.Dialog.BaseAlert</item>
-    </style>
     <style name="Theme.DeviceDefault.Resolver" parent="@*android:style/Theme.Material">
         <item name="android:backgroundTint">@*android:color/background_material_dark</item>
         <item name="android:windowBackground">@*android:color/transparent</item>
@@ -280,21 +284,5 @@
         <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
         <item name="android:textColorPrimaryInverse">@*android:color/background_material_dark</item>
         <item name="android:colorBackground">@*android:color/material_grey_900</item>
-    </style>
-    <style name="Theme.DeviceDefault.Light.Dialog.NoActionBar.MinWidth" parent="@*android:style/Theme.Material.Dialog.NoActionBar.MinWidth">
-        <item name="*android:windowFixedWidthMajor">@*android:dimen/dialog_fixed_width_major</item>
-        <item name="*android:windowFixedWidthMinor">@*android:dimen/dialog_fixed_width_minor</item>
-        <item name="*android:windowFixedHeightMajor">@*android:dimen/dialog_fixed_height_major</item>
-        <item name="*android:windowFixedHeightMinor">@*android:dimen/dialog_fixed_height_minor</item>
-        <item name="android:colorPrimary">@*android:color/primary_dark_device_default_settings</item>
-        <item name="android:colorPrimaryDark">@*android:color/primary_device_default_settings</item>
-        <item name="android:colorSecondary">@*android:color/secondary_device_default_settings_light</item>
-        <item name="android:colorAccent">@*android:color/accent_device_default_light</item>
-        <item name="android:colorControlNormal">@*android:color/accent_device_default_light</item>
-        <item name="android:textColorPrimary">#ffffffff</item>
-        <item name="android:textColorSecondary">#fff5f5f5</item>
-        <item name="android:textColorTertiary">#b3f5f5f5</item>
-        <item name="android:textColorHint">#ff999999</item>
-        <item name="android:textColorAlertDialogListItem">#ffffffff</item>
     </style>
 </resources>
